# rsomics-bed-shift

./: Cargo.toml  README.md
benches/: bed_shift.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: input.bed
