[package]
name = "rsomics-bed-shift"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Shift BED coordinates by a fixed offset — bedtools shift equivalent"
repository = "https://github.com/omics-rust/rsomics-bed-shift"
readme = "README.md"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "shift", "bioinformatics", "bedtools", "genomics"]

[[bin]]
name = "rsomics-bed-shift"
path = "src/main.rs"

[lib]
name = "rsomics_bed_shift"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bed_shift"
harness = false
